# media-screen

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  screen.py  setup.cfg  setup.py  spotify.py
.github/workflows/: github-actions-build.yaml  github-actions-lint.yml  github-actions-media-screen.yaml  github-actions-tests.yaml
media_screen/: config.py  lastfm.py  main.py  misc.py  screen.py  spotify.py
src/media_screen/: lastfm.py  main.py  misc.py  scheduler.py  screen.py  spotify.py
tests/: test_unit.py
