
[metadata]
name = media_screen
version = 0.0.0
author = Mladen Gibanica
author_email = mgcth@users.noreply.github.com
description = Raspberry Pi Spotify fetch and e-ink screen update for media player
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mgcth/media_screen
project_urls =
    Bug Tracker = https://github.com/mgcth/media_screen/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7.3

[options.packages.find]
where = src

[flake8]
max-line-length = 100